# reqres_rest_api_tests

./: .gitignore  README.md  pyproject.toml
tests/: conftest.py  test_regres.py
utils/: load_shema.py
