[tool.poetry]
name = "reqres-rest-api-tests"
version = "0.1.0"
description = ""
authors = ["Irina Kirillova <{ID}+{username}@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pytest = "7.4.3"
requests = "2.31.0"
jsonschema = "4.20.0"
[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
